Bug 152948 - Calc Function Wizard incorrectly displays 2 ISEVEN() and 2 ISODD()
Summary: Calc Function Wizard incorrectly displays 2 ISEVEN() and 2 ISODD()
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.4.2.3 release
Hardware: All All
: medium normal
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: target:7.6.0 target:7.4.6 target:7.5.0.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2023-01-09 13:56 UTC by ady
Modified: 2023-01-24 10:36 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description ady 2023-01-09 13:56:01 UTC
Description:
Searching for ISEVEN in the Function Wizard, shows 2 results: ISEVEN(Value) and ISEVEN(Number). One of those should be ISEVEN_ADD. Same goes for ISODD. When unchecking the option to "Use English function names", the "_ADD" functions are shown, but not when the option is checked.

Steps to Reproduce:
Set the option to use English function names, start the Function Wizard, type ISEVEN, see the list of functions.
Set the option NOT to use English function names, start the Function Wizard, type ISEVEN, see the list of functions.
The same goes for ISODD.


Actual Results:
2 ISEVEN (or 2 ISODD). Users cannot distinguish between the two.

Expected Results:
Two distinctive functions should be listed: ISEVEN and ISEVEN_ADD (or ISODD and ISODD_ADD).


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 7.4.3.2 (x64) / LibreOffice Community
Build ID: 1048a8393ae2eeec98dff31b5c133c5f1d08b890
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: default; VCL: win
Locale: en-US (es_AR); UI: en-US
Calc: CL

It can be replicated in Safe Mode too.

Reported in irc #libreoffice-qa
Comment 1 Buovjaga 2023-01-09 14:28:03 UTC
Bibisected with linux-64-7.4 repo to https://git.libreoffice.org/core/commit/32019fae7730fc8d94f14d47ebaccbdc6775340a
Resolves: tdf#135993 Create ScFunctionList and ScFuncDesc with English names

That commit was a backport of d778c6fd5c2ba8e27df46ec9e183a61ad29e30d5 originally for 7.5
Comment 2 Commit Notification 2023-01-10 00:03:30 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b5cca905c6f3e090dae6e649381664925474a04a

Resolves: tdf#152948 Do not use GetExcelName() to obtain English function name

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Buovjaga 2023-01-10 10:55:48 UTC
Verified

Arch Linux 64-bit, X11
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: f1d00da1bb16330bef9316a3e4f04506f9bb862f
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: kf5 (cairo+xcb)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded Jumbo
Built on 10 January 2023
Comment 4 Commit Notification 2023-01-10 16:34:10 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f98d04571c99b70ff753d322b1f43adc8e0433ba

Related: tdf#152948 Align AddInMap English names to Add-In implementation

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2023-01-10 16:36:14 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/334e8c511957f3e42e6b05a86f74107282a54186

Resolves: tdf#152948 Do not use GetExcelName() to obtain English function name

It will be available in 7.4.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2023-01-10 18:44:28 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/9e42cba14ea823705c0e26da765e4b6446ffbde5

Resolves: tdf#152948 Do not use GetExcelName() to obtain English function name

It will be available in 7.5.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2023-01-11 12:00:16 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/a4de9d2bb2f1aea011bd1652d72b349369da03a0

Related: tdf#152948 Align AddInMap English names to Add-In implementation

It will be available in 7.5.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2023-01-11 13:46:27 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/f388ea5b3734aca80d7c61c850413c649294c446

Related: tdf#152948 Align AddInMap English names to Add-In implementation

It will be available in 7.4.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Xisco Faulí 2023-01-24 10:36:18 UTC
7.4.5 was a hotfix release, updating target in status-whiteboard